<resources>
    <string name="app_name">El Mejor Precio</string>

    //activity_content_home
    <string name="tvCambioPrecio">Cambiaron de precio</string>
    <string name="txt_recientes">Agregados Recientemente</string>
    <string name="txt_oferta">Ofertas de la Semana</string>

    //activity_home_drawer
    <string name="navigation_drawer_inicio">Inicio</string>
    <string name="navigation_drawer_PLU">Productos</string>
    <string name="navigation_drawer_SUP">Vendedores</string>
    <string name="navigation_drawer_subtitle">Personal</string>
    <string name="navigation_drawer_favoritos">Favoritos</string>
    <string name="navigation_drawer_subtitle2">Extras</string>
    <string name="navigation_drawer_configuracion">Configuracion</string>

    //app_bar
    <string name="app_bar_buscar">Buscar</string>
    <string name="tienda_menu_favorito">Agregar a Favoritos</string>
    <string name="tienda_menu_ver_productos">Ver sus Productos</string>
    <string name="tienda_menu_mapa">Ir a Mapa</string>
    <string name="producto_menu_compras">Agregar a Compras</string>
    <string name="producto_menu_detalles">Ver Detalles</string>
    <string name="delete_menu_favorito">Quitar de Favoritos</string>
    <string name="go_PLU">Ir a Productos</string>
    <string name="share">Compartir</string>


    //generales
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">El Mejor Precio</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_activity_plu">Buscar</string>
    <string name="title_activity_productos">Productos</string>
    <string name="title_activity_favoritos">Favoritos</string>
    <string name="title_activity_super">Buscar</string>
    <string name="title_activity_supermercado">Vendedores</string>
    <string name="title_activity_maps_buscar">Map</string>
    <string name="title_activity_lista_compras">Mi Lista de Compras</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Configuración</string>

    <!-- Preference Titles -->
    <string name="notificaciones_header">Notificaciones</string>
    <string name="acerca_header">Información</string>

    <!-- Notificaciones Preferences -->
    <string name="notificaciones_title">Permitir Notificaciones</string>
    <string name="vibracion_title">Vibración</string>
    <string name="vibracion_summary_on">Vibrar al recibir la notificación
    </string>
    <string name="vibracion_summary_off">Recibir notificación sólo con sonido</string>

    <!-- Acerca de Preferences -->
    <string name="acerca_title">Acerca de&#8230;</string>

    <!-- Activity Acerca de -->
    <string name="acerca">Información de App</string>
    <string name="desarrollado">Desarrollado por</string>
    <string name="skysam">Inversiones SkySam, C.A.</string>
    <string name="atencion_cliente">Atención al usuario:</string>
    <string name="contacto">inversionesskysam@gmail.com</string>
    <string name="title_activity_info_producto">InfoProductoActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_info_vendedor">InfoVendedorActivity</string>

    <string name="ubicacion_preferida">Ubicación preferida para entregas:</string>
    <string name="texto_vacio"> </string>
    <string name="telefonos_vendedor">Telefonos:</string>
    <string name="correo_vendedor">Correo:</string>
    <string name="otros_productos">Productos de este vendedor:</string>

    <string name="vendedor_info_producto">Vendedor:</string>
    <string name="cantidad_info_producto">Cantidad a la venta:</string>
    <string name="precio_info_producto">Precio:</string>


</resources>
