<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_inicio"
            android:icon="@drawable/ic_home"
            android:title="@string/navigation_drawer_inicio" />
        <item
            android:id="@+id/nav_productos"
            android:icon="@drawable/ic_productos"
            android:title="@string/navigation_drawer_PLU" />
        <item
            android:id="@+id/nav_supermercados"
            android:icon="@drawable/ic_vendedor"
            android:title="@string/navigation_drawer_SUP" />
    </group>

    <item android:title="@string/navigation_drawer_subtitle">
        <menu>
            <item
                android:id="@+id/nav_favorito"
                android:icon="@drawable/ic_favoritos"
                android:title="@string/navigation_drawer_favoritos" />

        </menu>
    </item>

    <item android:title="@string/navigation_drawer_subtitle2">
        <menu>
            <item
                android:id="@+id/nav_configuracion"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/navigation_drawer_configuracion" />

        </menu>
    </item>

</menu>
