<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <PreferenceCategory app:title="@string/notificaciones_header">

        <SwitchPreferenceCompat
            app:key="notificacion"
            app:title="@string/notificaciones_title"
            android:icon="@drawable/ic_noitificacion"
            android:defaultValue="true"
            />


        <SwitchPreferenceCompat
            app:dependency="notificacion"
            app:key="vibracion"
            app:summaryOff="@string/vibracion_summary_off"
            app:summaryOn="@string/vibracion_summary_on"
            app:title="@string/vibracion_title" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/acerca_header">
        <PreferenceScreen
            app:title="@string/acerca_title"
            android:icon="@drawable/ic_info"
            >
            <intent
                android:action="android.intent.action.VIEW"
                android:targetPackage="com.example.hchirinos.elmejorprecio"
                android:targetClass="com.example.hchirinos.elmejorprecio.AcercadeActivity"
                />
        </PreferenceScreen>
    </PreferenceCategory>

</PreferenceScreen>
